[MY_BANK] Several use cases implemented
