# my-bank/my-bank-infrastructure/src/main/java/com/javpm/mybank/infrastructure/apirest/mappers/WalletV1DTOMapper.java
@@ -1,17 +1,21 @@
 package com.javpm.mybank.infrastructure.apirest.mappers;
 
-import com.javpm.mybank.domain.User;
-import com.javpm.mybank.domain.Wallet;
-import com.javpm.mybank.infraastructure.apirest.model.UserV1DTO;
+import com.javpm.mybank.application.commands.CreateDepositCommand;
+import com.javpm.mybank.domain.model.Wallet;
+import com.javpm.mybank.infraastructure.apirest.model.DepositRequestV1DTO;
 import com.javpm.mybank.infraastructure.apirest.model.WalletRequestV1DTO;
-import com.javpm.mybank.application.commands.SaveWalletCommand;
+import com.javpm.mybank.application.commands.CreateWalletCommand;
 import com.javpm.mybank.infraastructure.apirest.model.WalletV1DTO;
 import org.mapstruct.Mapper;
+import org.mapstruct.Mapping;
 
 @Mapper
 public interface WalletV1DTOMapper {
 
-  SaveWalletCommand asSaveWalletCommand(WalletRequestV1DTO src);
+  CreateWalletCommand asSaveWalletCommand(WalletRequestV1DTO src);
+
+  @Mapping(target = "targetWalletId", source = "walletId")
+  CreateDepositCommand asCreateDepositCommand(DepositRequestV1DTO src, Integer walletId);
 
   WalletV1DTO asWalletV1DTO(Wallet wallet);
 }
