# my-bank/my-bank-infrastructure/src/main/resources/my-bank-openapi-rest.yml
@@ -58,12 +58,7 @@ paths:
       summary: Retrieve information for the specified wallet
       description: Retrieves information for the wallet with the given ID belonging to the user with the corresponding ID, including the balance and transaction history.
       parameters:
-        - name: walletId
-          in: path
-          description: ID of the wallet to retrieve.
-          required: true
-          schema:
-            type: integer
+        - $ref: '#/components/parameters/WalletIdParam'
       responses:
         '200':
           description: Wallet information returned successfully.
@@ -71,8 +66,36 @@ paths:
             application/json:
               schema:
                   $ref: '#/components/schemas/WalletV1'
+        '400':
+          description: Bad request.
         '404':
           description: Wallet not found.
+        "500":
+          description: Unexpected error.
+  /v1/wallets/{walletId}/deposit:
+    post:
+      tags:
+        - walletV1
+      operationId: depositInWallet
+      summary: Deposit money in the given wallet
+      description: Deposit money in the given wallet.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/DepositRequestV1'
+      parameters:
+        - $ref: '#/components/parameters/WalletIdParam'
+      responses:
+        '200':
+          description: Wallet deposit made successfully.
+        '400':
+          description: Bad request.
+        '404':
+          description: Wallet not found.
+        "500":
+          description: Unexpected error.
   /v1/wallets/transfer:
     post:
       tags:
@@ -93,7 +116,17 @@ paths:
           description: Invalid request parameters.
         '404':
           description: Wallet not found.
+        "500":
+          description: Unexpected error.
 components:
+  parameters:
+    WalletIdParam:
+      name: walletId
+      in: path
+      description: ID of the wallet to retrieve.
+      required: true
+      schema:
+        type: integer
   schemas:
     UserRequestV1:
       type: object
@@ -129,6 +162,7 @@ components:
         password:
           type: string
       required:
+        - id
         - name
         - lastName
         - email
@@ -137,41 +171,35 @@ components:
       type: object
       description: the wallet request
       properties:
-        name:
+        nickname:
           type: string
-        lastName:
-          type: string
-        email:
-          type: string
-          format: email
-        password:
-          type: string
+        userId:
+          type: integer
       required:
-        - name
-        - lastName
-        - email
-        - password
+        - nickname
     WalletV1:
       type: object
       description: the wallet request
       properties:
         id:
           type: integer
-        name:
+        nickname:
           type: string
-        lastName:
-          type: string
-        email:
-          type: string
-          format: email
-        password:
-          type: string
+        userId:
+          type: integer
       required:
         - id
-        - name
-        - lastName
-        - email
-        - password
+        - nickname
+        - userId
+    DepositRequestV1:
+      type: object
+      properties:
+        amount:
+          type: integer
+          format: int64
+          minimum: 0
+      required:
+        - amount
     TransferRequestV1:
       type: object
       properties:
@@ -180,7 +208,8 @@ components:
         targetWalletId:
           type: integer
         amount:
-          type: number
+          type: integer
+          format: int64
           minimum: 0
       required:
         - originWalletId
